# CLI-TODO

./: .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/001-phase1-todo-app/: 001-phase-i-complete-implementation.green.prompt.md  1-phase1-todo-spec-creation.spec.prompt.md  2-clarify-phase1-todo-spec-review.spec.prompt.md  3-phase1-todo-technical-plan.plan.prompt.md  4-phase1-todo-task-generation.tasks.prompt.md  5-phase1-todo-artifact-analysis.misc.prompt.md
history/prompts/constitution/: 001-evolution-todo-constitution-creation.constitution.prompt.md  002-constitution-phase-correction.constitution.prompt.md
specs/001-phase1-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase1-todo-app/checklists/: requirements.md
src/: __init__.py  main.py
src/cli/: __init__.py  menu.py
src/models/: __init__.py  task.py
src/services/: __init__.py  task_service.py
tests/integration/: test_cli.py
tests/unit/: test_task.py  test_task_service.py
